crates/phoenix-parser/src/snapshots/phoenix_parser__parser__tests__snapshot_error_compound_assignment.snap
---
source: crates/phoenix-parser/src/parser.rs
assertion_line: 2251
expression: messages
---
[
    "expected expression",
]
