crates/phoenix-parser/src/snapshots/phoenix_parser__parser__tests__snapshot_error_missing_closing_brace.snap
---
source: crates/phoenix-parser/src/parser.rs
assertion_line: 2230
expression: messages
---
[
    "expected '}'",
]
