crates/phoenix-parser/src/snapshots/phoenix_parser__parser__tests__snapshot_error_missing_function_name.snap
---
source: crates/phoenix-parser/src/parser.rs
assertion_line: 2223
expression: messages
---
[
    "expected identifier",
]
