crates/phoenix-parser/src/snapshots/phoenix_parser__parser__tests__snapshot_error_unexpected_token_in_expression.snap
---
source: crates/phoenix-parser/src/parser.rs
expression: messages
---
[
    "expected expression",
]
